# Chace-Game

./: CMakeLists.txt  GameProject  GameProject_Linux  README.md  main.cpp
assets/: level1.txt  level2.txt  level3.txt
src/entities/: boss.cpp  boss.h  enemy.cpp  enemy.h  entity.cpp  entity.h  player.cpp  player.h
src/game/: GameManager.cpp  GameManager.hpp
src/map/: environment.cpp  environment.h
src/menu/: MainMenu.cpp  MainMenu.h
